# ml_titanic

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
titanic/: __init__.py  dataset.py  features.py  plots.py
titanic/modeling/: predict.py  train.py
